--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "newco-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "8.16.0",
+    "npm": "6.4.1"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
